--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
   </head>
-  <body>
+  <body class="bg-light bg-gradient">
     {{{body}}}
   </body>
 </html>
