--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,6 +29,14 @@
       <a class="col col-sm-2" href="https://github.com/ITS0luciones">
         <img src="/images/github.png" alt="github" height="48px" width="48px" />
       </a>
+      <a class="col col-sm-2" href="https://wa.me/528712650643">
+        <img
+          src="/images/whatsapp.png"
+          alt="whatsapp"
+          height="48px"
+          width="48px"
+        />
+      </a>
     </div>
   </div>
 </center>
